      displayed briefly in a passive pop-up that hides in a short time.
      
    - New program icon.
    
    - Mapview now can be displayed with terrain also.
    
v1.7

	- The user can now decide if to display open or closed wifis, or both

	- Start/Stop the service via a specific menu command and save that setting
      to preferences.

v1.8

    - The user can now delete the database completely (an empty file remains)

v1.9

    - New Translations: Poland Language

v1.10

	- Exportable KML files
	
	- "Export KML" moved to the top stack of the menu. The delete button should
	  be theorically the less used one in the application and so moved in the
	  "options" group.
	  
v1.11

    - GPS status is printed in toast message by the service when it changes.
    
v1.12

    - Previous had a Bad Google API KEy for certificate.
    
v1.13

    - Faster service and maps updates.

v2.0

	- Send WiFis to online database http://wardrivedb.appstop.com/

v2.1

	- Sends only the newly updated WiFis based on the last sync date.

v2.2

	- Updates timestamps only if effectively updates any info in the record.
	  This will prevent to send duplicate data on sync.

v2.3

    - Lighter syncronization to server, sends smaller packets now (20 each).

v2.4

    - Progress bar while sending to server.
    
v2.5

    - Sending to server now is never started more than once, remains in
      background, and the progress bar can be resumed by choosing "send" again.
    
v2.6

    - Force quit of the application when calling quit.
      This should solve the issue about drawing battery even when closing the app.
      
v2.7

    - Also shows closed wifis count on statistics.
    - Shows last running dates for application and service on statistics.
    - Show last catched wifis since the last service run on statistics.

v2.8

    - XML export now has colored dots depending of WiFis security methods.

v2.9

	- Sending to online database now only sends open wifis.
	