@@ -1,5 +1,2 @@
 
  - Display AP info in someway.
-
- - When clicking to the send to database make an option for
-   "new ones", "all of them", "cancel"
